Refactor without bootstrap
Bootstrap is seriously overkill for how simple the site is

Also, losing bootstrap allows a lot more freedom with animation.

--- a/src-client/styles/main.scss
+++ b/src-client/styles/main.scss
@@ -1,16 +1,11 @@
+@import './variables';
+
+@import './text';
+@import './generic';
 @import './background';
+
 @import './navigation';
-@import './freewall';
+
 @import './pages';
-@import './videos';
-@import './fonts';
-
-html {
-  overflow: hidden;
-  height: 100%;
-}
-
-body {
-  height: 100%;
-  overflow: auto;
-}
+@import './splash-page';
+// @import './about-page';
