--- a/src-client/styles/background.scss
+++ b/src-client/styles/background.scss
@@ -11,6 +11,8 @@
 
   background: url(../assets/overlay-texture.png) repeat;
   background-color: rgba(0,0,0,0.0);
+
+  transition: background-color $transition-time;
 }
 
 .video-background {
