--- a/src-client/styles/pages.scss
+++ b/src-client/styles/pages.scss
@@ -1,84 +1,69 @@
-
-//Splash Pge
-.splash-title {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-
-  display: flex;
-  justify-content:center;
-  align-items: center;
-
-  h1 {
-    font-size: 16vw;
+.page {
+  p {
+    padding-left: $padding;
+    padding-right: $padding;
+    max-width: $med-width;
   }
-
-  z-index: -50;
 }
 
-video::-webkit-media-controls-start-playback-button {
-  display: none;
-}
-
-.splash-background {
-  background: url(../assets/nut-white.svg) no-repeat center;
-  background-size: contain;
-  opacity: 0.5;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100vw;
-  height: 100vh;
+.page.navigate-enter {
+  max-height: 0vh;
   overflow: hidden;
-  z-index: -50;
 }
 
-//Work Content
-#work-dropdown {
-  font-family: "Bebas-Neue-Regular";
-  font-size: 11vw;
-  line-height: 1;
-  color: black;
-  float: left;
-  box-shadow: none;
-  border: none;
-  outline: none;
-
-  span {
-    font-size: 15px !important;
-  }
+.page.navigate-enter-active {
+  max-height: 100vh;
+  transition: max-height $transition-time ease-in-out;
 }
 
-#work-header {
-
-  background-color: white;
-  box-sizing: content-box;
-  margin: 0px -15px 0px -15px;
-
-  ul {
-    font-family: "Bebas-Neue-Regular";
-    right: 25px;
-    left: inherit;
-    margin-top: -1px;
-    margin-left: 15px;
-  }
+.page.navigate-leave {
+  max-height: 100vh;
+  overflow: hidden;
 }
 
-// Body Content
-.header-line {
-  max-width: 1300px;
-
-  h1,h2,h3,h4,h5,h6 {
-    line-height: 0.9;
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
+.page.navigate-leave-active {
+  max-height: 0vh;
+  transition: max-height $transition-time ease-in-out;
 }
 
-.body-line {
-  max-width: 1200px;
-  font-size: 15px;
-  margin-top: 2%;
-}
+//
+// .page.navigate-enter {
+//   position: relative;
+//   top: -100vh;
+// }
+//
+// .page.navigate-enter-active {
+//   position: relative;
+//   top: 0vh;
+//   transition: top $transition-time ease-in-out;
+// }
+//
+// .page.navigate-leave {
+//   position: relative;
+//   top: 0vh;
+// }
+//
+// .page.navigate-leave-active {
+//   position: relative;
+//   top: 100vh;
+//   transition: top $transition-time ease-in-out;
+// }
+//
+// .page.navigate-enter {
+//   opacity: 0;
+//
+// }
+//
+// .page.navigate-enter-active {
+//   opacity: 1;
+//   transition: opacity $transition-time ease-in-out;
+// }
+//
+// .page.navigate-leave {
+//   opacity: 1;
+// }
+//
+// .page.navigate-leave-active {
+//   opacity: 0;
+//   transition: opacity $transition-time ease-in-out;
+// }
