--- a/src-client/styles/navigation.scss
+++ b/src-client/styles/navigation.scss
@@ -75,5 +75,11 @@ $nav-holder-size: $title-size * 2 + $padding;
 }
 
 .nav-home.active,.nav-home:hover {
-  background-image: url('assets/nut-black.svg');
+  background-image: url('./assets/nut-black.svg');
+}
+
+#nav-holder.inverse {
+  .nav-home {
+    background-image: url('./assets/nut-black.svg');
+  }
 }
