--- a/src-client/styles/variables.scss
+++ b/src-client/styles/variables.scss
@@ -12,12 +12,13 @@ $padding: 20px;
 
 $med-mult: 0.8;
 $small-mult: 0.675;
-$mini-mult: 0.45;
+$mini-mult: 0.425;
 
 $text-color: white;
 $inverted-text-color: black;
 
 $bg-color: transparent;
 $inverted-bg-color: $text-color;
+$overlay-opacity: 0.6;
 
 $transition-time: 500ms;
