--- a/src-client/styles/about-page.scss
+++ b/src-client/styles/about-page.scss
@@ -20,3 +20,40 @@
     transition: height, 250ms;
   }
 }
+
+#our-team-section {
+  .block {
+    cursor: pointer;
+    overflow: hidden;
+  }
+
+  .body {
+    margin: $padding * 0.5;
+    position: relative;
+    z-index: 10;
+  }
+
+  .staff-picture {
+    // position: absolute;
+    // top: 0px;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.675;
+    cursor: pointer;
+
+    transition: opacity $transition-time;
+  }
+
+  .staff-picture:hover {
+    opacity: 1;
+  }
+
+  .staff-picture.featured {
+    opacity: 1;
+  }
+
+}
