--- a/src-client/styles/pages.scss
+++ b/src-client/styles/pages.scss
@@ -1,69 +1,45 @@
 .page {
   p {
-    padding-left: $padding;
-    padding-right: $padding;
-    max-width: $med-width;
+    @extend .med-width;
   }
 }
 
+.staff-picture {
+
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.675;
+  cursor: pointer;
+
+  transition: opacity $transition-time;
+}
+
+.staff-picture:hover {
+  opacity: 1;
+}
+
+.staff-picture.featured {
+  opacity: 1;
+}
+
 .page.navigate-enter {
-  max-height: 0vh;
-  overflow: hidden;
+  opacity: 0;
 }
 
 .page.navigate-enter-active {
-  max-height: 100vh;
-  transition: max-height $transition-time ease-in-out;
+  opacity: 1;
+  transition: opacity $transition-time ease-in-out;
 }
 
 .page.navigate-leave {
-  max-height: 100vh;
-  overflow: hidden;
+  opacity: 1;
 }
 
 .page.navigate-leave-active {
-  max-height: 0vh;
-  transition: max-height $transition-time ease-in-out;
+  opacity: 0;
+  transition: opacity $transition-time ease-in-out;
 }
-
-//
-// .page.navigate-enter {
-//   position: relative;
-//   top: -100vh;
-// }
-//
-// .page.navigate-enter-active {
-//   position: relative;
-//   top: 0vh;
-//   transition: top $transition-time ease-in-out;
-// }
-//
-// .page.navigate-leave {
-//   position: relative;
-//   top: 0vh;
-// }
-//
-// .page.navigate-leave-active {
-//   position: relative;
-//   top: 100vh;
-//   transition: top $transition-time ease-in-out;
-// }
-//
-// .page.navigate-enter {
-//   opacity: 0;
-//
-// }
-//
-// .page.navigate-enter-active {
-//   opacity: 1;
-//   transition: opacity $transition-time ease-in-out;
-// }
-//
-// .page.navigate-leave {
-//   opacity: 1;
-// }
-//
-// .page.navigate-leave-active {
-//   opacity: 0;
-//   transition: opacity $transition-time ease-in-out;
-// }
