Background switching works
now working on the Dropdown

--- a/src-client/styles/generic.scss
+++ b/src-client/styles/generic.scss
@@ -24,6 +24,10 @@ p, a {
   p, a {
     color: $inverted-text-color;
   }
+
+  .clickable.active,.clickable:hover {
+    color: $inverted-text-hover-color;
+  }
 }
 
 .fill {
