--- a/src-client/styles/variables.scss
+++ b/src-client/styles/variables.scss
@@ -16,6 +16,7 @@ $mini-mult: 0.425;
 
 $text-color: white;
 $inverted-text-color: black;
+$inverted-text-hover-color: gray;
 
 $bg-color: transparent;
 $inverted-bg-color: $text-color;
