--- a/src-client/styles/background.scss
+++ b/src-client/styles/background.scss
@@ -12,11 +12,15 @@
   background: url(../assets/overlay-texture.png) repeat;
   background-color: rgba(0,0,0,0.0);
 
-  transition: background-color $transition-time;
+  transition: background-color $transition-time, background $transition-time;
 }
 
 #video-background-overlay.dark {
   background-color: rgba(0,0,0, $overlay-opacity);
+}
+
+#video-background-overlay.inverse {
+  background: $text-color;
 }
 
 #video-background {
