Main pages implemented
But animated removed for the time being. Sub routed animation looks
like shit, I’ll have to program something specifically for each page.

--- a/src-client/styles/background.scss
+++ b/src-client/styles/background.scss
@@ -9,7 +9,7 @@
 
   z-index: -99;
 
-  background: url(../assets/overlay-texture.png) repeat;
+  background: url(/assets/overlay-texture.png) repeat;
   background-color: rgba(0,0,0,0.0);
 
   transition: background-color $transition-time, background $transition-time;
