--- a/src-client/styles/pages.scss
+++ b/src-client/styles/pages.scss
@@ -12,18 +12,22 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 0.675;
   cursor: pointer;
 
-  transition: opacity $transition-time;
 }
 
-.staff-picture:hover {
-  opacity: 1;
-}
-
-.staff-picture.featured {
-  opacity: 1;
+.staff-writeup {
+  display: inline-block;
+  padding: $padding * 0.5 $padding $padding * 0.5 $padding;
+  .staff-picture {
+    float: left;
+    margin-right: $padding;
+    opacity: 1;
+    cursor: auto;
+    width: 180px;
+    height: 180px;
+    display: inline-block;
+  }
 }
 
 .page.navigate-enter {
