--- a/src-client/styles/splash-page.scss
+++ b/src-client/styles/splash-page.scss
@@ -62,7 +62,7 @@
 
 #splash-background {
 
-  background: url(../assets/nut-white.svg) no-repeat center;
+  background: url(/assets/nut-white.svg) no-repeat center;
   background-size: contain;
   opacity: 0.5;
   position: fixed;
