--- a/src-client/styles/freewall.scss
+++ b/src-client/styles/freewall.scss
@@ -6,3 +6,12 @@
   background-position: center;
   background-size: cover;
 }
+
+.freewall-container {
+
+  // background: rgba($bg-color, 0.1);
+  // background: linear-gradient(to right, rgba($bg-color, 0.25), $text-color);
+  // padding-top: $padding;
+  // padding-bottom: $padding;
+
+}
