--- a/src-client/styles/variables.scss
+++ b/src-client/styles/variables.scss
@@ -16,11 +16,13 @@ $mini-mult: 0.36;
 
 $text-color: white;
 $inverted-text-color: black;
-$inverted-text-hover-color: gray;
+$inverted-text-hover-color: #aaa;
 
 $bg-color: transparent;
 $inverted-bg-color: $text-color;
 $overlay-opacity: 0.6;
+
+$gm-brand: #e29f9f;
 
 $video-width: 960px;
 $video-height: 540px;
