--- a/src-client/styles/navigation.scss
+++ b/src-client/styles/navigation.scss
@@ -1,5 +1,5 @@
 
-$nav-holder-size: $title-size * 2 + $padding;
+$nav-holder-size: $title-size * 1 + $padding;
 
 #nav-holder {
   display: block;
@@ -21,7 +21,7 @@ $nav-holder-size: $title-size * 2 + $padding;
 .nav-link {
 
   margin-top: $padding;
-  margin-right: $padding;
+  margin-right: $padding * 1.5;
 
   @media screen and (max-width: $med-width) {
     margin-top: $padding * $med-mult;
@@ -43,7 +43,8 @@ $nav-holder-size: $title-size * 2 + $padding;
 .nav-home {
 
   background-image: url(/assets/nut-white.svg);
-  transition: background-image $transition-time;
+  transform: scale(1,1);
+  transition: background-image $transition-time, transform $transition-time;
 
   width: $title-size;
   height: $title-size;
@@ -74,8 +75,13 @@ $nav-holder-size: $title-size * 2 + $padding;
 
 }
 
-.nav-home:hover, .nav-home.active {
-  background-image: url(/assets/nut-black.svg);
+.nav-home:hover {
+  background-image: url(/assets/nut-gray.svg);
+  transform: scale(1.1,1.1);
+}
+
+.nav-home.active {
+  background-image: url(/assets/nut-gray.svg);
 }
 
 #nav-holder.inverse {
