--- a/src-client/styles/video-page.scss
+++ b/src-client/styles/video-page.scss
@@ -11,10 +11,32 @@
 
 }
 
+.hack-image-viewer {
+  margin: auto;
+  display: block;
+
+  padding-top: 0px;
+
+  max-width: $large-width * $hack-image-factor;
+
+  @media screen and (max-width: $med-width) {
+    max-width: $med-width * $hack-image-factor;
+  }
+
+  @media screen and (max-width: $small-width) {
+    max-width: $small-width * $hack-image-factor;
+  }
+
+  @media screen and (max-width: $mini-width) {
+    max-width: $mini-width * $hack-image-factor;
+  }
+}
+
 .video-player {
 
   width: $video-width;
   height: $video-height;
+  padding-top: 0px;
 
   @media screen and (max-width: $med-width) {
     width: $video-width * $med-mult;
@@ -31,9 +53,8 @@
     height: $video-height * $mini-mult;
   }
 
-  transition: width $transition-time, height $transition-time;
+  transition: width $transition-time, height $transition-time, padding-top $transition-time;
 
   margin: auto;
   display: block;
-
 }
