--- a/src-client/styles/video-page.scss
+++ b/src-client/styles/video-page.scss
@@ -37,6 +37,7 @@
   width: $video-width;
   height: $video-height;
   padding-top: 0px;
+  border: none;
 
   @media screen and (max-width: $med-width) {
     width: $video-width * $med-mult;
