--- a/src-client/styles/variables.scss
+++ b/src-client/styles/variables.scss
@@ -3,16 +3,18 @@ $med-width: 1200px;
 $small-width: 800px;
 $mini-width: 500px;
 
+$nav-link-size: 52px;
 $title-size: 62px;
 $title-kerning: 0px;
-$body-size: 28px;
+$body-size: 22px;
 $body-kerning: inherit;
 
 $padding: 20px;
 
+$large-mult: 1.5;
 $med-mult: 0.75;
-$small-mult: 0.50;
-$mini-mult: 0.36;
+$small-mult: 0.60;
+$mini-mult: 0.4;
 
 $text-color: white;
 $inverted-text-color: black;
