--- a/src-client/styles/about-page.scss
+++ b/src-client/styles/about-page.scss
@@ -20,3 +20,40 @@
     transition: height, 250ms;
   }
 }
+
+#about-page {
+
+  .title.large {
+    // max-width: $large-width * 1.4;
+
+    @media screen and (max-width: $med-width) {
+      max-width: $med-width;
+    }
+
+    @media screen and (max-width: $small-width) {
+      max-width: $small-width;
+    }
+
+    @media screen and (max-width: $mini-width) {
+      max-width: $mini-width;
+    }
+  }
+}
+
+#bottom-info {
+  .title {
+    letter-spacing: 0.5px;
+  }
+}
+
+.about-stick {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  // #bottom-info {
+  //   position: absolute;
+  //   bottom: $padding;
+  // }
+}
