--- a/src-client/styles/background.scss
+++ b/src-client/styles/background.scss
@@ -1,3 +1,18 @@
+#gear-background {
+
+  background: url(/assets/nut-white.svg) no-repeat center;
+  background-size: contain;
+  opacity: 0.5;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: -50;
+
+}
+
 #video-background-overlay {
   position: fixed;
 
