--- a/src-client/styles/splash-page.scss
+++ b/src-client/styles/splash-page.scss
@@ -72,7 +72,7 @@ $play-button-height: $play-button-width;
 .play-button {
 
   display: inline-block;
-  background-image: url(/assets/play-button-white.svg);
+  background-image: url(../assets/play-button-white.svg);
   background-repeat: no-repeat;
   background-position: center;
 
@@ -99,7 +99,7 @@ $play-button-height: $play-button-width;
 .clickable:hover {
   transition: color $transition-time;
   .play-button {
-    background-image: url(/assets/play-button-gray.svg);
+    background-image: url(../assets/play-button-gray.svg);
     transform: scale(1.25,1.25);
   }
 }
