--- a/src-client/styles/text.scss
+++ b/src-client/styles/text.scss
@@ -1,8 +1,8 @@
 @font-face {
 
   font-family: 'Bebas-Neue-Regular';
-  src: url('/assets/bebasneue-webfont.woff2') format('woff2'),
-       url('/assets/bebasneue-webfont.woff') format('woff');
+  src: url('../assets/bebasneue-webfont.woff2') format('woff2'),
+       url('../assets/bebasneue-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -10,10 +10,10 @@
 
 @font-face {
 	font-family: 'AvenirNext LT Pro';
-	src: url('/assets/AvenirNextLTPro-Light.eot');
-	src: url('/assets/AvenirNextLTPro-Light.eot?#iefix') format('embedded-opentype'),
-		url('/assets/AvenirNextLTPro-Light.woff') format('woff'),
-		url('/assets/AvenirNextLTPro-Light.ttf') format('truetype');
+	src: url('../assets/AvenirNextLTPro-Light.eot');
+	src: url('../assets/AvenirNextLTPro-Light.eot?#iefix') format('embedded-opentype'),
+		url('../assets/AvenirNextLTPro-Light.woff') format('woff'),
+		url('../assets/AvenirNextLTPro-Light.ttf') format('truetype');
 	font-weight: 300;
 	font-style: normal;
 }
