--- a/src-iso/styles/index.scss
+++ b/src-iso/styles/index.scss
@@ -2,6 +2,10 @@
 @import "./generic";
 @import "./text";
 
+@import "../pages/about";
+@import "../pages/home";
+@import "../pages/page";
+@import "../components/Freewall/block";
 @import "../components/background";
 @import "../components/navigation";
 @import "../components/nut";
