--- a/src-iso/styles/_variables.scss
+++ b/src-iso/styles/_variables.scss
@@ -1,12 +1,20 @@
-$animation-time: 500ms;
+$large-width: 1500px;
+
+$med-width: 1200px;
+
+$small-width: 800px;
+
+$mini-width: 500px;
+
+$animation-time: 250ms;
 
 $root-font-size: 1.25em;
 
 $padding: 0.8rem;
 
 $text-color: #fff;
+$text-color-hover: #aaa;
 $text-color-inverted: #000;
-$text-color-inverted-hover: #aaa;
 
 $bg-color: transparent;
 $bg-color-inverted: #fff;
