--- a/src-iso/styles/index.scss
+++ b/src-iso/styles/index.scss
@@ -7,5 +7,6 @@
 @import "../pages/page";
 @import "../components/Freewall/freewall";
 @import "../components/background";
+@import "../components/dropdown";
 @import "../components/navigation";
 @import "../components/nut";
