--- a/src-iso/pages/about.scss
+++ b/src-iso/pages/about.scss
@@ -1,12 +1,18 @@
+#about-page {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 #about-writeup {
 
   padding-top: 0rem;
+  flex: 1;
 
   h1 {
     font-size: 3.75rem;
     line-height: 0.9em;
   }
-
 }
 
 #about-block {
@@ -14,7 +20,7 @@
 
   h2, h3, h4 {
     line-height: 0.9em;
-  }
+  };
 
 }
 
