--- a/src-iso/pages/page.scss
+++ b/src-iso/pages/page.scss
@@ -1,3 +1,17 @@
-.page {
+.page.navigate-enter {
+  opacity: 0;
+}
 
+.page.navigate-enter.navigate-enter-active {
+  opacity: 1;
+  transition: opacity $animation-time ease-in;
+}
+
+.page.navigate-leave {
+  opacity: 1;
+}
+
+.page.navigate-leave.navigate-leave-active {
+  opacity: 0;
+  transition: opacity $animation-time ease-in;
 }
