--- a/src-iso/pages/about.scss
+++ b/src-iso/pages/about.scss
@@ -4,6 +4,10 @@
   min-height: 100vh;
 }
 
+#staff-wall {
+  margin-bottom: 2rem;
+}
+
 #about-writeup {
 
   padding-top: 0rem;
@@ -40,4 +44,11 @@
 #facebook {
   @extend %social;
   background-image: url(../assets/facebook.svg)
+}
+
+.profile {
+  display: inline-block;
+  position: absolute;
+  transition: width $animation-time, height $animation-time, top $animation-time, left $animation-time;
+  overflow: hidden;
 }
