--- a/src-iso/styles/index.scss
+++ b/src-iso/styles/index.scss
@@ -5,7 +5,7 @@
 @import "../pages/about";
 @import "../pages/home";
 @import "../pages/page";
-@import "../components/Freewall/freewall";
+@import "../components/Grid/grid";
 @import "../components/background";
 @import "../components/dropdown";
 @import "../components/navigation";
