--- a/src-iso/pages/about.scss
+++ b/src-iso/pages/about.scss
@@ -48,7 +48,11 @@
 
 .profile {
   display: inline-block;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   position: absolute;
+  filter: grayscale(100%);
   transition: width $animation-time, height $animation-time, top $animation-time, left $animation-time;
   overflow: hidden;
 }
