Getting videos to play
It’s getting muddy, gonna take a break and then come back to it

--- a/src-iso/components/Grid/grid.scss
+++ b/src-iso/components/Grid/grid.scss
@@ -2,6 +2,9 @@
   position: relative;
   display: block;
   left: 0px;
-  height: 0px;
   transition: left $animation-time, height $animation-time;
+}
+
+.grid.grid-featured {
+
 }
