--- a/src-iso/styles/index.scss
+++ b/src-iso/styles/index.scss
@@ -5,8 +5,11 @@
 @import "../pages/about";
 @import "../pages/home";
 @import "../pages/page";
+@import "../pages/work";
 @import "../components/Grid/grid";
 @import "../components/background";
 @import "../components/dropdown";
 @import "../components/navigation";
 @import "../components/nut";
+@import "../components/profile";
+@import "../components/showcase";
