--- a/src-iso/styles/index.scss
+++ b/src-iso/styles/index.scss
@@ -3,6 +3,7 @@
 @import "./text";
 
 @import "../pages/about";
+@import "../pages/directors";
 @import "../pages/home";
 @import "../pages/page";
 @import "../pages/work";
