--- a/src-iso/components/showcase.scss
+++ b/src-iso/components/showcase.scss
@@ -1,66 +1,123 @@
 $panim-time: $animation-time * 2;
+$video-width: 40rem;
 
-.product {
+.product-cell {
+
   position: absolute;
-  overflow: hidden;
+
+  background-size: cover;
+  background-position: center;
+  background-color: #aaa;
+  background-repeat: no-repeat;
+  opacity: 1;
+
   cursor: pointer;
 
   transition: opacity $panim-time, width $panim-time, height $panim-time,
-    top $panim-time, left $panim-time, transform $panim-time;
+    top $panim-time, left $panim-time, background-image $animation-time;
 
-  .product-image {
-    position: relative;
-    transition: height $panim-time, width $panim-time, background-image $panim-time;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #aaa;
-    width: 100%;
-    height: 100%;
-  }
+}
 
+.product-cell:hover {
+  opacity: 0.5;
+}
+
+.product-cell.product-cell-disabled {
+  cursor: default;
+  pointer-events: none;
+}
+
+.product-feature {
   .product-modal {
     position: fixed;
-    opacity: 0;
     background-color: black;
+    pointer-events: none;
     top: 0rem;
-    bottom: 100vh;
     left: 0rem;
     right: 0rem;
-    z-index: 0;
+    bottom: 0rem;
+    z-index: 2000;
+    cursor: pointer;
+
+    opacity: 0;
 
     transition: bottom $animation-time, opacity $animation-time;
+  }
 
+  .product-detail {
+
+    position: absolute;
+    display: inline-block;
+    pointer-events: none;
+
+    background-color: $text-color;
+    z-index: 2500;
+
+    margin-left: -$video-width * 0.5;
+    left: 50%;
+    top: 5rem;
+    opacity: 0;
+
+    transition: opacity $animation-time, height $panim-time;
+    width: $video-width;
+
+    .product-video {
+      iframe {
+        width: $video-width;
+        height: $video-width * (9/16);
+      }
+
+      height: 0rem;
+      transition: height $panim-time;
+      overflow: hidden;
+
+    }
+
+    .product-description {
+      color: $text-color-inverted;
+      width: $video-width - 1rem;
+      display: block-inline;
+
+      padding: 0.50rem;
+      padding-left: 0.55rem;
+      padding-top: 0rem;
+      -webkit-margin-before: 0rem;
+      -webkit-margin-after: 0rem;
+      transition: top $panim-time;
+    }
+
+    .product-title {
+      color: $text-color-inverted;
+      padding: 0.25rem;
+      padding-left: 0.55rem;
+    }
   }
 
 }
 
-.product-video {
-  position: fixed;
-  background-color: black;
-  z-index: 1500;
-  opacity: 0;
-  pointer-events: none;
-
-  transition: height $panim-time, width $panim-time,
-  top $panim-time, left $panim-time, opacity $animation-time;
-}
-
-.product-video.product-video-show {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.product.product-featured {
+.product-feature.product-feature-show {
   .product-modal {
-    bottom: 0vh;
     opacity: 0.5;
-    z-index: 1000;
+    pointer-events: auto;
+  }
+
+  .product-detail {
+    pointer-events: auto;
+    opacity: 1;
+
+    .product-video {
+      height: $video-width * (9/16);
+    }
+  }
+
+  .product-detail:hover {
+    .product-description {
+    }
   }
 }
+
 
 .showcase.grid {
-  // position: absolute;
   background-color: $bg-color-inverted;
   top: 0rem;
   left: 0rem;
