--- a/src-iso/styles/_generic.scss
+++ b/src-iso/styles/_generic.scss
@@ -20,3 +20,10 @@
   pointer-events: none;
   cursor: default;
 }
+
+.fill.inverse {
+  background-color: $bg-color-inverted;
+  height: 100%;
+}
+
+$links-clearance: $links-height + $padding * 2;
