--- a/src-iso/styles/_variables.scss
+++ b/src-iso/styles/_variables.scss
@@ -12,6 +12,8 @@ $root-font-size: 1.25em;
 
 $padding: 0.8rem;
 
+$links-height: 2.4000000000000004rem;
+
 $text-color: #fff;
 $text-color-hover: #aaa;
 $text-color-inverted: #000;
