--- a/src-iso/styles/index.scss
+++ b/src-iso/styles/index.scss
@@ -7,10 +7,11 @@
 @import "../pages/home";
 @import "../pages/page";
 @import "../pages/work";
+@import "../components/Grid/block";
 @import "../components/Grid/grid";
 @import "../components/background";
 @import "../components/dropdown";
 @import "../components/navigation";
 @import "../components/nut";
-@import "../components/profile";
+@import "../components/people";
 @import "../components/showcase";
