--- a/src-iso/components/dropdown.scss
+++ b/src-iso/components/dropdown.scss
@@ -1,24 +1,14 @@
 $li-height: 2rem;
 $open-time: $animation-time * 0.8;
+$nav-time: $animation-time * 1;
 $scaled-up: scale(1.2, 1.2);
 
 .dropdown-container {
   background-color: $bg-color-inverted;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  padding-top: 3rem;
+  transition: transform $animation-time;
+  padding-top: $links-clearance;
+  margin-top: -$padding * 1.25;
   z-index: 100;
-
-  transition: top $animation-time;
-}
-
-.navigate-enter, .navigate-leave-active {
-  .dropdown-container {
-    top: -10rem;
-  }
 }
 
 .dropdown-caret {
@@ -26,7 +16,11 @@ $scaled-up: scale(1.2, 1.2);
   height: 0.25em;
   margin-left: 0.05em;
   fill: $text-color-inverted;
-  transition: fill $animation-time, transform $animation-time;
+  transition: fill $nav-time, transform $nav-time ease-in-out;
+}
+
+.dropdown-caret.hidden {
+  transform: scale(0,0);
 }
 
 .clickable.active, .clickable:hover {
@@ -51,10 +45,12 @@ $scaled-up: scale(1.2, 1.2);
 .dropdown {
   @extend .inverse;
   position: relative;
+  z-index: 1000;
 
   h1 {
     padding-left: $padding * 0.875;
     font-size: 5rem;
+    display: inline;
   }
 
   ul {
