--- a/src-iso/pages/about.scss
+++ b/src-iso/pages/about.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  margin-top: $links-clearance;
 }
 
 #staff-wall {
@@ -26,6 +27,10 @@
     line-height: 0.9em;
   };
 
+}
+
+#key-staff-button {
+  padding-bottom: $padding;
 }
 
 %social {
