--- a/src-iso/pages/page.scss
+++ b/src-iso/pages/page.scss
@@ -1,17 +1,79 @@
+.transition-slide-down,.transition-slide-up {
+  transform-origin: top left;
+  transition: transform $animation-time;
+}
+
+.transition-fade {
+  transition: opacity $animation-time;
+}
+
+.transition-pop {
+  transition: transform $animation-time, opacity $animation-time;
+}
+
 .page.navigate-enter {
-  opacity: 0;
+
+  .transition-slide-down {
+    transform: translate(0vw,100vh);
+  }
+  .transition-slide-up {
+    transform: translate(0vw,-100vh);
+  }
+  .transition-fade {
+    opacity: 0;
+  }
+  .transition-pop {
+    opacity: 0;
+    transform: scale(0,0);
+  }
 }
 
 .page.navigate-enter.navigate-enter-active {
-  opacity: 1;
-  transition: opacity $animation-time ease-in;
+  .transition-slide-down,.transition-slide-up {
+    transform: translate(0vw,0vh);
+  }
+  .transition-fade {
+    opacity: 1;
+  }
+  .transition-pop {
+    opacity: 1;
+    transform: scale(1,1);
+  }
 }
 
 .page.navigate-leave {
-  opacity: 1;
+  .transition-slide-down,.transition-slide-up {
+    transform: translate(0vw,0vh);
+  }
+  .transition-fade {
+    opacity: 1;
+  }
+  .transition-pop {
+    opacity: 1;
+    transform: scale(1,1);
+  }
 }
 
 .page.navigate-leave.navigate-leave-active {
-  opacity: 0;
-  transition: opacity $animation-time ease-in;
+  .transition-slide-down {
+    transform: translate(0vw,100vh);
+  }
+  .transition-slide-up {
+    transform: translate(0vw,-100vh);
+  }
+  .transition-fade {
+    opacity: 0;
+  }
+  .transition-pop {
+    opacity: 0;
+    transform: scale(4,4);
+  }
+}
+
+.page {
+  position: absolute;
+  top: 0rem;
+  left:0rem;
+  right:0rem;
+  bottom:0rem;
 }
