--- a/src-iso/components/navigation.scss
+++ b/src-iso/components/navigation.scss
@@ -1,12 +1,14 @@
-$home-link-width: 13.5rem;
-$home-icon-dim: 2rem;
+$home-link-width: 17.5rem;
+$home-icon-dim: 2.25rem;
 $nut-time: $animation-time * 1;
+$nav-font-size: 1.3rem;
 
 #links {
   position: absolute;
   left: 0rem;
   right: 0rem;
   z-index: 500;
+  font-size: $nav-font-size;
 
   height: $links-height;
 
@@ -18,10 +20,12 @@ $nut-time: $animation-time * 1;
 
     #home-nut {
       position: absolute;
-      top: $padding + 0.1rem;
+      top: $padding + 0.3125rem;
       transition: width $nut-time, height $nut-time, opacity $nut-time, fill $nut-time;
+
       width: $home-icon-dim;
       height: $home-icon-dim;
+
       z-index: 1000;
     }
 
@@ -30,6 +34,7 @@ $nut-time: $animation-time * 1;
       #home-link-title {
         transition: color $animation-time;
         margin-left: $home-icon-dim + 0.2rem;
+        // font-size: $nav-font-size;
       };
 
       display: inline-block;
@@ -51,7 +56,7 @@ $nut-time: $animation-time * 1;
   }
 
   .link {
-    margin-left: $padding;
+    margin-left: $padding * 2;
     transition: transform $animation-time;
   }
 
