--- a/src-iso/pages/about.scss
+++ b/src-iso/pages/about.scss
@@ -15,7 +15,7 @@
   flex: 1;
 
   h1 {
-    font-size: 3.75rem;
+    font-size: 4rem;
     line-height: 0.9em;
   }
 }
@@ -30,6 +30,7 @@
 }
 
 #key-staff-button {
+  font-size: 2.2rem !important;
   padding-bottom: $padding;
 }
 
