--- a/src-iso/styles/index.scss
+++ b/src-iso/styles/index.scss
@@ -6,6 +6,7 @@
 @import "../pages/directors";
 @import "../pages/home";
 @import "../pages/page";
+@import "../pages/video";
 @import "../pages/work";
 @import "../components/Grid/block";
 @import "../components/Grid/grid";
