--- a/src-iso/components/background.scss
+++ b/src-iso/components/background.scss
@@ -1,4 +1,3 @@
-$overlay-dark-opacity: 0.6;
 //disables play button for mobile
 video::-webkit-media-controls-start-playback-button {
   display: none;
@@ -15,14 +14,15 @@ video::-webkit-media-controls-start-playback-button {
 
   z-index: -99;
 
-  background: url(../assets/overlay-texture.png) repeat;
+  background-image: url(../assets/overlay-texture.png);
   background-color: rgba(0,0,0,0.0);
 
-  transition: background-color $animation-time, background $animation-time;
+  transition: background-color $animation-time, background-color $animation-time, background-image $animation-time;
 }
 
-#video-background-overlay.dark {
-  background-color: rgba(0,0,0, $overlay-dark-opacity)
+#video-background-overlay.inverse {
+  background-image: none;
+  background-color: $bg-color-inverted;
 }
 
 #video-background {
@@ -41,8 +41,4 @@ video::-webkit-media-controls-start-playback-button {
 
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
-}
-
-#video-background.dark {
-  -webkit-filter: blur(10px);
 }
